# rust-playground

./: .gitignore
api-rest/: Cargo.toml
api-rest/src/: main.rs
api-rest/src/api/: car.rs
api-rest/src/api/car/: delivery.rs  filter.rs  mod.rs  repository.rs
api-rest/src/api/car/delivery/: mutations.rs  queries.rs
api-rest/src/api/car/repository/: mod.rs
api-rest/src/models/: car.rs  mod.rs  response.rs
